# mc-recommendation

./: .gitignore  README.md  data_collecter.py  pyproject.toml
data/: main.py  pagination.py  utils.py
src/: app.py
src/code/: process_data.py
src/data/: articles.py  es_queries.py  main.py  utils.py
src/ml/: clustering.py  main.py  recommendation.py  utils.py  vector_similarity.py  vectorization.py
src/templates/: index.html  recommendations.html
