[tool.poetry]
name = "recommendation-mc"
version = "0.1.0"
description = ""
authors = ["Olya Tricolici <oleatrik@gmail.com>"]
readme = "README.md"
packages = [{include = "recommendation_mc"}]

[tool.poetry.dependencies]
python = "^3.11"
black = "23.3.0"
elastic-transport = "8.4.0"
elasticsearch = "7.17.9"
elasticsearch-dsl = "7.4.1"
python-dotenv = "1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
