[tool.poetry]
name = "mc-recommendation"
version = "0.1.0"
description = ""
authors = ["Olya Tricolici <oleatrik@gmail.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = ">=3.9.6,<3.12"
black = "23.3.0"
elasticsearch = "7.17.9"
nltk = "^3.8.1"
rowordnet = "^1.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
